renamed:    .browserslistrc -> angular version/.browserslistrc 	renamed:    .editorconfig -> angular version/.editorconfig 	renamed:    .gitignore -> angular version/.gitignore 	renamed:    .vscode/extensions.json -> angular version/.vscode/extensions.json 	renamed:    .vscode/launch.json -> angular version/.vscode/launch.json 	renamed:    .vscode/tasks.json -> angular version/.vscode/tasks.json 	renamed:    README.md -> angular version/README.md 	renamed:    angular.json -> angular version/angular.json 	renamed:    karma.conf.js -> angular version/karma.conf.js 	renamed:    package-lock.json -> angular version/package-lock.json 	renamed:    package.json -> angular version/package.json 	renamed:    src/app/app-routing.module.ts -> angular version/src/app/app-routing.module.ts 	renamed:    src/app/app.component.css -> angular version/src/app/app.component.css 	renamed:    src/app/app.component.html -> angular version/src/app/app.component.html 	renamed:    src/app/app.component.spec.ts -> angular version/src/app/app.component.spec.ts 	renamed:    src/app/app.component.ts -> angular version/src/app/app.component.ts 	renamed:    src/app/app.module.ts -> angular version/src/app/app.module.ts 	new file:   angular version/src/app/contact/assets/comfortaa.ttf 	new file:   angular version/src/app/contact/contact.component.css 	new file:   angular version/src/app/contact/contact.component.html 	new file:   angular version/src/app/contact/contact.component.spec.ts 	new file:   angular version/src/app/contact/contact.component.ts 	renamed:    src/assets/.gitkeep -> angular version/src/assets/.gitkeep 	renamed:    src/environments/environment.prod.ts -> angular version/src/environments/environment.prod.ts 	renamed:    src/environments/environment.ts -> angular version/src/environments/environment.ts 	renamed:    src/favicon.ico -> angular version/src/favicon.ico 	renamed:    src/index.html -> angular version/src/index.html 	renamed:    src/main.ts -> angular version/src/main.ts

--- a/angular version/src/styles.css
+++ b/angular version/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+body{
+    height: 90vh;
+    margin: 0;
+    padding: 0;
+}
